--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    compile 'com.graphql-java:graphql-java:16.2'
+    compile 'com.graphql-java:graphql-java-spring-webmvc:2.0'
+    compile 'com.google.code.gson:gson:2.8.7'
 }
 
 test {
